Made adjustments to how everything is sized via the "vh" setting. Adjusted certain elements to be fixed position and place them in the window appropriately. It works on Safari iOS 13. iPhone 6s.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -107,7 +107,6 @@
 
 @media only screen and (max-width: 678px) {
   .footer {
-    /* height: 7vh; */
     flex-direction: row;
     align-items: center;
   }
@@ -119,6 +118,12 @@
   }
   .attribution-list {
     font-size: 0.75rem;
+  }
+}
+
+@media only screen and (max-height: 425px) {
+  .footer-link a {
+    font-size: 0.4rem;
   }
 }
 
